@@ -2,6 +2,10 @@
 		- zbxEncode comma and nonascii fix
 		- Fix in Time.pm for _ntp_offset returning scientific notation
 		- Fix in Disk.pm for returning scientific notation
+		- Try 5 times to get NTP server response in Time.pm _ntp_offset
+		- err_mode => "quiet" for File::Slurp funcs
+		- read_file optimization in Disk.pm analyzeStats
+		- cache function
 
 1.08	2016-12-22
 		- Hotfix for Supervisor worker status
